# spcm-core

./: CONTRIBUTING.md  README.md  make_docs.py  pyproject.toml
.github/workflows/: spcm-docs-pages.yml
docs/: index.html  spcm_core.html
docs/spcm_core/: _version.html  constants.html  pyspcm.html  regs.html  spcerr.html  spcm_tools.html
src/examples/: netbox_discovery.py  requirements.txt  simple_rec_fifo.py  simple_rec_fifo_multi_ts_poll.py  simple_rec_multi.py  simple_rec_single-cudafft.py  simple_rec_single.py  simple_rec_single_digital.py  simple_rep_fifo.py  simple_rep_sequence.py  simple_rep_single.py  simple_sync_rec_fifo.py  simple_sync_rep_rec.py  simple_sync_rep_single.py
src/spcm_core/: README.md  SUPPORTED_DEVICES.md  __init__.py  _version.py  spcm_tools.py
